--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -32,7 +32,7 @@
 			<input type="text" id="room_name" class="form-control" placeholder="#room_name">
 
 		</div>
-		<button onclick="addRoom()" class="btn btn-success" >#Add Room</button>
+		<button onclick="addRoom();" class="btn btn-success" >#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
 	<div id="output"></div>
 	</center>
